--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+        <li data-ns-test="shoppingList">Laptop</li>
+        <li data-ns-test="shoppingList">Smartphone</li>
+        <li data-ns-test="shoppingList">Gaming Console</li>
+    </ol>
+
+    <!-- Unordered List -->
+    <ul>
+        <li data-ns-test="holidayList">Paris</li>
+        <li data-ns-test="holidayList">Maldives</li>
+        <li data-ns-test="holidayList">Tokyo</li>
+    </ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
